# filter_maker

./: CMakeLists.txt  CMakeLists.txt.bak  IMG_0002.HEIC  application.cpp  application.h  base_filter.cpp  base_filter.h  bitmap.cpp  bitmap.h  command_line_parser.cpp  command_line_parser.h  filter_pipeline_maker.cpp  filter_pipeline_maker.h  main.cpp  test.h
